<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.backdoor.impenglishdialog.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.backdoor.impenglishdialog.DialogueList"
        android:label="@string/menu_dialogue"
        tools:layout="@layout/fragment_dialoges_list" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.backdoor.impenglishdialog.FavFragment"
        android:label="@string/menu_favo"
        tools:layout="@layout/fragment_slideshow" />
</navigation>